--- a/css/table.css
+++ b/css/table.css
@@ -60,33 +60,6 @@ th, td{
     padding: 7px, 10px, 10px, 10px; 
 }
 
-
-/*
-.row1 {
-    background-color: #c27a16;
-}
-
-.row2 {
-    background-color: #d7902e;
-}
-
-.row3 {
-    background-color: #e6a243;
-}
-
-.row4 {
-    background-color: #f1b15a;
-}
-
-.row5 {
-    background-color: #f3bc70;
-}
-
-.row6 {
-    background-color: #f8cb8d;
-}
-    */
-
 tbody tr:nth-child(even) {
     background-color: #c0ae80;
 }
@@ -95,9 +68,9 @@ tbody tr:nth-child(odd) {
     background-color: #ffffff;
 }
 
-.headTable {
+tbody tr:nth-child(1) {
     background-color: #55360b;
-    color: black;
+    color: wheat;
 } 
 
 .labelForm {
